added in different product

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
     <h1>Maharashtrian Sweet Shop</h1>
     <div class="p-card">
-        <img src="gulabjamun.jpg" class="p_img">
+        <img src="./images/gulabjamun.jpg" class="p_img">
         <p><b><i>gulabjamun</i></b></p>
         <p><b>Price:</b>500/kg</p>
         <button  class="add-to-card">
@@ -59,7 +59,7 @@
         </button>
     </div>
     <div class="p-card">
-        <img src="jilebi.jpg" class="p_img">
+        <img src="./images/jilebi.jpg" class="p_img">
         <p><b><i>Jilebi</i></b></p>
         <p><b>Price:</b>280/kg</p>
         <button  class="add-to-card">
@@ -67,7 +67,7 @@
         </button>
     </div>
     <div class="p-card">
-        <img src="modak.avif" class="p_img">
+        <img src="./images/modak.jpg" class="p_img">
         <p><b><i>Modak</i></b></p>
         <p><b>Price:</b>350/kg</p>
         <button  class="add-to-card">
@@ -75,7 +75,7 @@
         </button>
     </div>
     <div class="p-card">
-        <img src="Puranpoli.jpg" class="p_img">
+        <img src="./images/Puranpoli.jpg" class="p_img">
         <p><b><i>Puranpoli</b></i></p>
         <p><b>Price:</b>200/kg</p>
         <button  class="add-to-card">
@@ -83,7 +83,7 @@
         </button>
     </div>
     <div class="p-card">
-        <img src="Dal Laddu.jpg" class="p_img">
+        <img src="./images/Dal Laddu.jpg" class="p_img">
         <p><b><i>Dal Laddu</i></b></p>
         <p><b>Price:</b>650/kg</p>
         <button  class="add-to-card">
@@ -91,7 +91,7 @@
         </button>
     </div>
     <div class="p-card">
-        <img src="barfi.jpg" class="p_img">
+        <img src="./images/barfi.jpg" class="p_img">
         <p><b><i>Barfi</i></b></p>
         <p><b>Price:</b>320/kg</p>
         <button  class="add-to-card">
@@ -99,7 +99,7 @@
         </button>
     </div>
     <div class="p-card">
-        <img src="kheer.jpg" class="p_img">
+        <img src="./images/kheer.jpg" class="p_img">
         <p><b><i>Kheer</i></b></p>
         <p><b>Price:</b>300/kg</p>
         <button  class="add-to-card">
@@ -107,7 +107,7 @@
         </button>
     </div>
     <div class="p-card">
-        <img src="motichoor.jpg" class="p_img">
+        <img src="./images/motichoor.jpg" class="p_img">
         <p><b><i>Motichoor Ladu</i></b></p>
         <p><b>Price:</b>400/kg</p>
         <button  class="add-to-card">
@@ -115,7 +115,7 @@
         </button>
     </div>
     <div class="p-card">
-        <img src="shrikhand.jpg" class="p_img">
+        <img src="./images/shrikhand.jpg" class="p_img">
         <p><b><i>Shrikhand</i></b></p>
         <p><b>Price:</b>500/kg</p>
         <button  class="add-to-card">
@@ -123,7 +123,7 @@
         </button>
     </div>
     <div class="p-card">
-        <img src="basundi.jpg" class="p_img">
+        <img src="./images/basundi.jpg" class="p_img">
         <p><b><i>Basundi</i></b></p>
         <p><b>Price:</b>500/kg</p>
         <button  class="add-to-card">
