new image added

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </button>
     </div>
     <div class="p-card">
-        <img src="./images/barfi.jpg" class="p_img">
+        <img src="./images/cocount barfi.jpg" class="p_img">
         <p><b><i>Barfi</i></b></p>
         <p><b>Price:</b>320/kg</p>
         <button  class="add-to-card">
