new image added

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </button>
     </div>
     <div class="p-card">
-        <img src="./images/Puranpoli.jpg" class="p_img">
+        <img src="./images/puranpoli.jpg" class="p_img">
         <p><b><i>Puranpoli</b></i></p>
         <p><b>Price:</b>200/kg</p>
         <button  class="add-to-card">
