--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </style>
 </head>
 <body>
-    <h1>Maharashtrian Sweet Shop</h1>
+    <h1><b><i><u>Maharashtrian Sweet Shop</u></i></b></h1>
     <div class="p-card">
         <img src="./images/gulabjamun.jpg" class="p_img">
         <p><b><i>gulabjamun</i></b></p>
